<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SetUpStep2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextStepsTheme"
            android:text="@string/second_step" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_6dp"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/txt_14sp"
            android:text="@string/choose_icon" />

        <include android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/recycler_view_user_icon"/>
        <Button
            android:id="@+id/set_up_2_fragment_btn_next"
            style="@style/SetUpAndSliderButtons"
            android:text="@string/next_btn"
            android:layout_marginBottom="@dimen/dim_40dp"
            />



    </LinearLayout>

</FrameLayout>