<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/dim_12dp">

            <TextView

                style="@style/TextStepsTheme"
                android:text="@string/first_step"

                />

            <EditText
                android:id="@+id/set_up_fragment_et_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_45dp"
                android:background="@drawable/background_et"
                android:hint="@string/user_name"
                android:padding="@dimen/dim_12dp"
                android:layout_margin="@dimen/dim_12dp"
                android:textColor="@color/colorGray" />


        </LinearLayout>

        <Button
            android:id="@+id/set_up_fragment_btn_next"
            style="@style/SetUpAndSliderButtons"
            android:layout_marginBottom="@dimen/dim_40dp"
            android:text="@string/next_btn" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
