<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/main_fragment_swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_55dp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/dim_12dp"
            android:layout_marginBottom="@dimen/dim_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/main_fragment_ll"

            app:layout_constraintTop_toTopOf="parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:background="@color/colorAccent"
               android:layout_height="wrap_content"
               android:padding="@dimen/dim_12dp"

               android:orientation="horizontal">
               <ImageView
                   android:layout_marginEnd="@dimen/dim_6dp"
                   android:layout_gravity="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_door"/>

               <TextView
                   android:layout_gravity="center"
                   android:layout_weight="1"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/rooms"
                   android:textSize="@dimen/txt_14sp"

                   />
           </LinearLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/main_fragment_ll"
            android:layout_marginTop="@dimen/dim_55dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/main_fragment_swipeContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_fragment_swipeContainer">


            <androidx.recyclerview.widget.RecyclerView

                android:layout_marginTop="@dimen/dim_12dp"
                android:id="@+id/main_fragment_rv_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_55dp"
                android:layout_marginTop="@dimen/dim_12dp"
                android:layout_marginBottom="@dimen/dim_12dp"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:padding="@dimen/dim_12dp">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/another_articles"
                    android:textSize="@dimen/txt_14sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:foreground="?selectableItemBackground"
                    android:gravity="end"
                    android:text="@string/delete_all"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/txt_14sp" />


            </LinearLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_fragment_pb_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.WhiteAccent"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/main_fragment_ll"
            app:layout_constraintEnd_toEndOf="@+id/main_fragment_swipeContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_fragment_ll" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>